Fix isort, pycodestyle and flake8 issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,10 @@
 [metadata]
 description-file = README.md
 
+[flake8]
+ignore = W605
+max-line-length = 120
+
 [pycodestyle]
 ignore = W605
 max-line-length = 120
